Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76811

QSlider in QGridLayout does not resize with Window resize on Mac 10.14 (Mojave)

XMLWordPrintable

    • macOS
    • 0ce3f7d62b93427ca5d0f4284ba774691cbbd4a7 (qt/qtbase/5.12)

      QSlider in QGridLayout is not getting resized when compiled on Mac 10.14 Mojave.
      Please refer to the attached sample.

      It is working fine with Windows, Linux and MacOs 10.13.6 ( High Sierra)

        1. qtbug76811.png
          qtbug76811.png
          30 kB
        2. qtbug76811.zip
          0.9 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tpochep Timur Pocheptsov
            shmittal Shveta Mittal
            Votes:
            2 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes